--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.15.0",
+    "firebase": "^12.3.0",
     "framer-motion": "latest",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
@@ -65,10 +67,13 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.2",
+    "hardhat": "^2.26.3",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
