--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
-    "@tailwindcss/postcss": "^4.1.9",
     "@types/bn.js": "^5.2.0",
     "@types/node": "^22",
     "@types/pbkdf2": "^3.1.2",
@@ -77,7 +76,8 @@
     "dotenv": "^17.2.2",
     "hardhat": "^2.26.3",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.20",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
